packages/@aws-cdk/aws-batch-alpha/test/integ.managed-compute-environment.js.snapshot/batch-stack.template.json
{
 "Resources": {
  "vpcA2121C38": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "batch-stack/vpc"
     }
    ]
   }
  },
  "vpcPublicSubnet1Subnet2E65531E": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "vpcA2121C38"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "batch-stack/vpc/PublicSubnet1"
     }
    ]
   }
  },
  "vpcPublicSubnet1RouteTable48A2DF9B": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "vpcA2121C38"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "batch-stack/vpc/PublicSubnet1"
     }
    ]
   }
  },
  "vpcPublicSubnet1RouteTableAssociation5D3F4579": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcPublicSubnet1RouteTable48A2DF9B"
    },
    "SubnetId": {
     "Ref": "vpcPublicSubnet1Subnet2E65531E"
    }
   }
  },
  "vpcPublicSubnet1DefaultRoute10708846": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcPublicSubnet1RouteTable48A2DF9B"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "vpcIGWE57CBDCA"
    }
   },
   "DependsOn": [
    "vpcVPCGW7984C166"
   ]
  },
  "vpcPublicSubnet1EIPDA49DCBE": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "batch-stack/vpc/PublicSubnet1"
     }
    ]
   }
  },
  "vpcPublicSubnet1NATGateway9C16659E": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "vpcPublicSubnet1Subnet2E65531E"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "vpcPublicSubnet1EIPDA49DCBE",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "batch-stack/vpc/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "vpcPublicSubnet1DefaultRoute10708846",
    "vpcPublicSubnet1RouteTableAssociation5D3F4579"
   ]
  },
  "vpcPublicSubnet2Subnet009B674F": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "vpcA2121C38"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "batch-stack/vpc/PublicSubnet2"
     }
    ]
   }
  },
  "vpcPublicSubnet2RouteTableEB40D4CB": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "vpcA2121C38"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "batch-stack/vpc/PublicSubnet2"
     }
    ]
   }
  },
  "vpcPublicSubnet2RouteTableAssociation21F81B59": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcPublicSubnet2RouteTableEB40D4CB"
    },
    "SubnetId": {
     "Ref": "vpcPublicSubnet2Subnet009B674F"
    }
   }
  },
  "vpcPublicSubnet2DefaultRouteA1EC0F60": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcPublicSubnet2RouteTableEB40D4CB"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "vpcIGWE57CBDCA"
    }
   },
   "DependsOn": [
    "vpcVPCGW7984C166"
   ]
  },
  "vpcPublicSubnet2EIP9B3743B1": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "batch-stack/vpc/PublicSubnet2"
     }
    ]
   }
  },
  "vpcPublicSubnet2NATGateway9B8AE11A": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "vpcPublicSubnet2Subnet009B674F"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "vpcPublicSubnet2EIP9B3743B1",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "batch-stack/vpc/PublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "vpcPublicSubnet2DefaultRouteA1EC0F60",
    "vpcPublicSubnet2RouteTableAssociation21F81B59"
   ]
  },
  "vpcPrivateSubnet1Subnet934893E8": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "vpcA2121C38"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "batch-stack/vpc/PrivateSubnet1"
     }
    ]
   }
  },
  "vpcPrivateSubnet1RouteTableB41A48CC": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "vpcA2121C38"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "batch-stack/vpc/PrivateSubnet1"
     }
    ]
   }
  },
  "vpcPrivateSubnet1RouteTableAssociation67945127": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcPrivateSubnet1RouteTableB41A48CC"
    },
    "SubnetId": {
     "Ref": "vpcPrivateSubnet1Subnet934893E8"
    }
   }
  },
  "vpcPrivateSubnet1DefaultRoute1AA8E2E5": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcPrivateSubnet1RouteTableB41A48CC"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "vpcPublicSubnet1NATGateway9C16659E"
    }
   }
  },
  "vpcPrivateSubnet2Subnet7031C2BA": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "vpcA2121C38"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "batch-stack/vpc/PrivateSubnet2"
     }
    ]
   }
  },
  "vpcPrivateSubnet2RouteTable7280F23E": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "vpcA2121C38"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "batch-stack/vpc/PrivateSubnet2"
     }
    ]
   }
  },
  "vpcPrivateSubnet2RouteTableAssociation007E94D3": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcPrivateSubnet2RouteTable7280F23E"
    },
    "SubnetId": {
     "Ref": "vpcPrivateSubnet2Subnet7031C2BA"
    }
   }
  },
  "vpcPrivateSubnet2DefaultRouteB0E07F99": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcPrivateSubnet2RouteTable7280F23E"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "vpcPublicSubnet2NATGateway9B8AE11A"
    }
   }
  },
  "vpcIGWE57CBDCA": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "batch-stack/vpc"
     }
    ]
   }
  },
  "vpcVPCGW7984C166": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "VpcId": {
     "Ref": "vpcA2121C38"
    },
    "InternetGatewayId": {
     "Ref": "vpcIGWE57CBDCA"
    }
   }
  },
  "minimalPropsFargateSecurityGroupA8D5CDD1": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "batch-stack/minimalPropsFargate/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "vpcA2121C38"
    }
   }
  },
  "minimalPropsFargate8E9B9556": {
   "Type": "AWS::Batch::ComputeEnvironment",
   "Properties": {
    "Type": "managed",
    "ComputeResources": {
     "MaxvCpus": 512,
     "SecurityGroupIds": [
      {
       "Fn::GetAtt": [
        "minimalPropsFargateSecurityGroupA8D5CDD1",
        "GroupId"
       ]
      }
     ],
     "Subnets": [
      {
       "Ref": "vpcPrivateSubnet1Subnet934893E8"
      },
      {
       "Ref": "vpcPrivateSubnet2Subnet7031C2BA"
      }
     ],
     "Type": "FARGATE",
     "UpdateToLatestImageVersion": true
    },
    "ReplaceComputeEnvironment": false,
    "State": "ENABLED",
    "UpdatePolicy": {}
   }
  },
  "maximalPropsFargateSecurityGroup94D64250": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "batch-stack/maximalPropsFargate/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "vpcA2121C38"
    }
   }
  },
  "maximalPropsFargateA2E688D8": {
   "Type": "AWS::Batch::ComputeEnvironment",
   "Properties": {
    "Type": "managed",
    "ComputeResources": {
     "MaxvCpus": 512,
     "SecurityGroupIds": [
      {
       "Fn::GetAtt": [
        "maximalPropsFargateSecurityGroup94D64250",
        "GroupId"
       ]
      }
     ],
     "Subnets": [
      {
       "Ref": "vpcPrivateSubnet1Subnet934893E8"
      },
      {
       "Ref": "vpcPrivateSubnet2Subnet7031C2BA"
      }
     ],
     "Type": "FARGATE_SPOT",
     "UpdateToLatestImageVersion": false
    },
    "ReplaceComputeEnvironment": true,
    "State": "ENABLED",
    "UpdatePolicy": {
     "JobExecutionTimeoutMinutes": 30,
     "TerminateJobsOnUpdate": true
    }
   }
  },
  "minimalPropsEc2SecurityGroup50CBE4DC": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "batch-stack/minimalPropsEc2/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "vpcA2121C38"
    }
   }
  },
  "minimalPropsEc2InstanceProfileRole1B9873C1": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ec2.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/service-role/AmazonEC2ContainerServiceforEC2Role"
       ]
      ]
     }
    ]
   }
  },
  "minimalPropsEc2InstanceProfile635FB12D": {
   "Type": "AWS::IAM::InstanceProfile",
   "Properties": {
    "Roles": [
     {
      "Ref": "minimalPropsEc2InstanceProfileRole1B9873C1"
     }
    ]
   }
  },
  "minimalPropsEc200AECC55": {
   "Type": "AWS::Batch::ComputeEnvironment",
   "Properties": {
    "Type": "managed",
    "ComputeResources": {
     "AllocationStrategy": "BEST_FIT_PROGRESSIVE",
     "Ec2Configuration": [
      {
       "ImageIdOverride": {
        "Ref": "SsmParameterValueawsserviceamiamazonlinuxlatestamznamihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter"
       },
       "ImageType": "ECS_AL2"
      }
     ],
     "InstanceRole": {
      "Fn::GetAtt": [
       "minimalPropsEc2InstanceProfile635FB12D",
       "Arn"
      ]
     },
     "InstanceTypes": [
      "optimal"
     ],
     "MaxvCpus": 256,
     "MinvCpus": 0,
     "SecurityGroupIds": [
      {
       "Fn::GetAtt": [
        "minimalPropsEc2SecurityGroup50CBE4DC",
        "GroupId"
       ]
      }
     ],
     "Subnets": [
      {
       "Ref": "vpcPrivateSubnet1Subnet934893E8"
      },
      {
       "Ref": "vpcPrivateSubnet2Subnet7031C2BA"
      }
     ],
     "Type": "EC2",
     "UpdateToLatestImageVersion": true
    },
    "ReplaceComputeEnvironment": false,
    "State": "ENABLED",
    "UpdatePolicy": {}
   }
  },
  "placementGroupD973C950": {
   "Type": "AWS::EC2::PlacementGroup"
  },
  "launchTemplateDEE5742D": {
   "Type": "AWS::EC2::LaunchTemplate",
   "Properties": {
    "LaunchTemplateData": {
     "TagSpecifications": [
      {
       "ResourceType": "instance",
       "Tags": [
        {
         "Key": "Name",
         "Value": "batch-stack/launchTemplate"
        }
       ]
      },
      {
       "ResourceType": "volume",
       "Tags": [
        {
         "Key": "Name",
         "Value": "batch-stack/launchTemplate"
        }
       ]
      }
     ]
    },
    "TagSpecifications": [
     {
      "ResourceType": "launch-template",
      "Tags": [
       {
        "Key": "Name",
        "Value": "batch-stack/launchTemplate"
       }
      ]
     }
    ]
   }
  },
  "LaunchTemplateSecurityGroup02438453": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "batch-stack/LaunchTemplate/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "vpcA2121C38"
    }
   }
  },
  "LaunchTemplateInstanceProfileRole037F2415": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ec2.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/service-role/AmazonEC2ContainerServiceforEC2Role"
       ]
      ]
     }
    ]
   }
  },
  "LaunchTemplateInstanceProfile81A7EF12": {
   "Type": "AWS::IAM::InstanceProfile",
   "Properties": {
    "Roles": [
     {
      "Ref": "LaunchTemplateInstanceProfileRole037F2415"
     }
    ]
   }
  },
  "LaunchTemplate04EC5460": {
   "Type": "AWS::Batch::ComputeEnvironment",
   "Properties": {
    "Type": "managed",
    "ComputeResources": {
     "AllocationStrategy": "BEST_FIT",
     "Ec2Configuration": [
      {
       "ImageIdOverride": {
        "Ref": "SsmParameterValueawsserviceamiamazonlinuxlatestamznamihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter"
       },
       "ImageType": "ECS_AL2"
      }
     ],
     "InstanceRole": {
      "Fn::GetAtt": [
       "LaunchTemplateInstanceProfile81A7EF12",
       "Arn"
      ]
     },
     "InstanceTypes": [
      "optimal"
     ],
     "LaunchTemplate": {
      "LaunchTemplateId": {
       "Ref": "launchTemplateDEE5742D"
      }
     },
     "MaxvCpus": 512,
     "MinvCpus": 256,
     "PlacementGroup": {
      "Fn::GetAtt": [
       "placementGroupD973C950",
       "GroupName"
      ]
     },
     "SecurityGroupIds": [
      {
       "Fn::GetAtt": [
        "LaunchTemplateSecurityGroup02438453",
        "GroupId"
       ]
      }
     ],
     "Subnets": [
      {
       "Ref": "vpcPrivateSubnet1Subnet934893E8"
      },
      {
       "Ref": "vpcPrivateSubnet2Subnet7031C2BA"
      }
     ],
     "Type": "EC2",
     "UpdateToLatestImageVersion": true
    },
    "ReplaceComputeEnvironment": true,
    "State": "ENABLED",
    "UpdatePolicy": {
     "JobExecutionTimeoutMinutes": 60,
     "TerminateJobsOnUpdate": false
    }
   }
  },
  "SpotFleetRole6D4F7558": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "batch.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "SpotEc2SecurityGroup1225E163": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "batch-stack/SpotEc2/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "vpcA2121C38"
    }
   }
  },
  "SpotEc2InstanceProfileRoleBA254130": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ec2.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/service-role/AmazonEC2ContainerServiceforEC2Role"
       ]
      ]
     }
    ]
   }
  },
  "SpotEc2InstanceProfileD921ABA1": {
   "Type": "AWS::IAM::InstanceProfile",
   "Properties": {
    "Roles": [
     {
      "Ref": "SpotEc2InstanceProfileRoleBA254130"
     }
    ]
   }
  },
  "SpotEc2A0470C83": {
   "Type": "AWS::Batch::ComputeEnvironment",
   "Properties": {
    "Type": "managed",
    "ComputeResources": {
     "AllocationStrategy": "SPOT_CAPACITY_OPTIMIZED",
     "BidPercentage": 95,
     "Ec2Configuration": [
      {
       "ImageIdOverride": {
        "Ref": "SsmParameterValueawsserviceamiamazonlinuxlatestamznamihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter"
       },
       "ImageType": "ECS_AL2"
      }
     ],
     "InstanceRole": {
      "Fn::GetAtt": [
       "SpotEc2InstanceProfileD921ABA1",
       "Arn"
      ]
     },
     "InstanceTypes": [
      "optimal"
     ],
     "MaxvCpus": 256,
     "MinvCpus": 0,
     "SecurityGroupIds": [
      {
       "Fn::GetAtt": [
        "SpotEc2SecurityGroup1225E163",
        "GroupId"
       ]
      }
     ],
     "SpotIamFleetRole": {
      "Fn::GetAtt": [
       "SpotFleetRole6D4F7558",
       "Arn"
      ]
     },
     "Subnets": [
      {
       "Ref": "vpcPrivateSubnet1Subnet934893E8"
      },
      {
       "Ref": "vpcPrivateSubnet2Subnet7031C2BA"
      }
     ],
     "Type": "SPOT",
     "UpdateToLatestImageVersion": true
    },
    "ReplaceComputeEnvironment": false,
    "State": "ENABLED",
    "UpdatePolicy": {}
   }
  }
 },
 "Parameters": {
  "SsmParameterValueawsserviceamiamazonlinuxlatestamznamihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter": {
   "Type": "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>",
   "Default": "/aws/service/ami-amazon-linux-latest/amzn-ami-hvm-x86_64-gp2"
  },
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
